# hortator

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml
backend/src/: main.rs
backend/src/routes/: auth.rs
frontend/: .gitignore  Cargo.toml  Dockerfile
frontend/config/: Trunk.toml  tailwind.config.js
frontend/src/: form.rs  list.rs  loading.rs  login.rs  main.rs
frontend/static/: index.html
