[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = "1.0.140"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5.7", features = ["postgres", "uuid", "chrono", "json", "runtime-tokio-rustls"] }

[dependencies.rocket_auth]
version = "0.4.0"
features = ["sqlx-sqlite", "sqlx-postgres"]
