[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
born = "0.0.1"
yew = { package = "yew", version="0.19.3", path = "../../yew/packages/yew" , features = ["csr"]}
gloo = "0.8.0"
gloo-console = "0.2.1"
js-sys = "0.3.59"
wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.82"
validator = { version = "0.16.0", features = ["derive"] }
serde = "1.0.141"
web-sys= {fetures=["HtmlInputElement", "KeyboardEvent"], version="0.3"}

[package.metadata.x]
dev-css = "NODE_ENV=dev npx tailwindcss -c ./config/tailwind.config.js -o ./static/tailwind.css"
minify-css = "NODE_ENV=production npx tailwindcss -c ./config/tailwind.config.js -o ./static/tailwind.css --minify"
dev = "trunk --config config/Trunk.toml serve"
